syntax = "proto3";
import "common.proto";
import "github.com/openline-ai/openline-customer-os/packages/server/message-store-api/proto/Message.proto";
option go_package = "openline-ai/channels-api/ent/proto";


service MessageEventService {
  rpc sendMessageEvent(proto.InputMessage) returns (proto.MessageId) {};
}